sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple pattern
for(int i <- 1 to get.length ){
          ^AlgBubbleSort1:11: error: '<-' expected but '}' found.
}
^